# cookiecutter-cmake

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json  cookiecutter.validation.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
{{cookiecutter.project_slug}}/cmake/: BuildType.cmake  Config.cmake.in  GetGitRevisionDescription.cmake  clang-cxx-dev-tools.cmake  version.h.in
{{cookiecutter.project_slug}}/dependencies/: CMakeLists.txt
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.h
{{cookiecutter.project_slug}}/src/: main.cpp  {{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/test/: CMakeLists.txt
{{cookiecutter.project_slug}}/test/src/: main.cpp
